# Competitive_Programming

./: CMakeLists.txt  test.cpp
Codeforces/: 100C.cpp  1190A.cpp  11B.cpp  1213D2.cpp  1294C.cpp  1324F.cpp  1327C.cpp  1461C.cpp  1461D.cpp  1468C.cpp  1469D.cpp  1498C.cpp  1498a.cpp  1498b.cpp  1509C.cpp  1511A.cpp  1511B.cpp  1511C.cpp  1511D.cpp  1519.cpp  320D.cpp  320D2.cpp  321B.cpp  328D.cpp  375D.cpp  418B.cpp  472A.cpp  486D.cpp  495A.cpp  498E.cpp  547A.cpp  598A.cpp  598B.cpp  598D.cpp  643B.cpp  644C.cpp  644D.cpp  648C.cpp  649A.cpp  649C.cpp  (+63 more)
MHC/: B1.cpp
USACO/Gold/: HILO.cpp  balance.cpp  balance2.cpp  barnpainting.cpp  boards.cpp  bovine.cpp  bracelet.cpp  bribing.cpp  count.cpp  count2.cpp  cowcamp.cpp  cowland.cpp  cowlandsol.cpp  cowmbat.cpp  cowpatibility.cpp  cowpatibility1.cpp  deleg.cpp  dining.cpp  dishes.cpp  drought.cpp  drought1.cpp  equal_subarray.cpp  exercise.cpp  farm_updates.cpp  fcolor.cpp  feast.cpp  fertilizing.cpp  find_and_replace.cpp  friendship_group.cpp  haircut.cpp  haybales.cpp  help.cpp  merging.cpp  milkvisits.cpp  modernart.cpp  modernart2.cpp  moo_route.cpp  mootuve.cpp  mooves.cpp  mountains1.cpp  (+31 more)
USACO/Silver/: COWOperations.cpp  Lemonade.cpp  acowmedia.cpp  angry.cpp  badmilk.cpp  berries.cpp  cereal.cpp  cereal2.cpp  citystate.cpp  clocktree.cpp  closestcowwins.cpp  closingfarms.cpp  comfortable.cpp  connectbarn.cpp  convention.cpp  conventiona.cpp  conventionb.cpp  convolutedintervals.cpp  countcross.cpp  cowcode.cpp  cowdance.cpp  cowjump.cpp  (+50 more)
practice/: CCC16S4.cpp
stress/: a.cpp  brute.cpp  stress-tester.cpp
(+391 files in other folders)
